<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Racing Prototype</string>
    <string name="action_settings">Settings</string>
    <string name="action_menu">メニュー</string>
    <string name="dialog_cancel">キャンセル</string>

    <string name="drawer_menu_home">ホーム</string>
    <string name="drawer_menu_race_list">レース一覧</string>
    <string name="drawer_menu_favorite_horse">お気に入り馬一覧</string>

    <string name="label_year">年</string>
    <string name="label_month">月</string>
    <string name="label_day">日</string>
    <string name="label_r">R</string>
    <string name="label_m">m</string>
    <string name="label_to">頭</string>
    <string name="label_start">発走</string>

    <string name="label_father">父</string>
    <string name="label_mother">母</string>
    <string name="label_mothers_father">母父</string>

    <string name="race_viewer_member_list">出馬表</string>
    <string name="race_viewer_odds">オッズ</string>
    <string name="race_viewer_result_list">結果</string>

    <string name="label_result">着</string>
    <string name="label_result_accident">中止</string>

    <string name="label_pay">円</string>

    <string name="favorite_hose_add">お気に入り馬に追加する</string>
    <string name="favorite_hose_remove">お気に入りから削除する</string>

    <string name="odds_order_odds">人気順</string>
    <string name="odds_order_gate_number">馬番順</string>
    <string name="odds_order_bracket_number">枠番順</string>
    <string name="odds_order_box">ボックス</string>
    <string name="odds_order_nagashi">流し</string>
    <string name="odds_order_nagashi_j1">軸1頭流し</string>
    <string name="odds_order_nagashi_j2">軸2頭流し</string>
    <string name="odds_order_formation">フォメ</string>
    <string name="odds_show">オッズ表示</string>
    <string name="odds_hide">馬番表示に戻る</string>
    <string name="odds_add">購入予定リストに追加</string>

    <string-array name="odds_title">
        <item>単勝・複勝</item>
        <item>枠連</item>
        <item>馬連</item>
        <item>ワイド</item>
        <item>馬単</item>
        <item>三連複</item>
        <item>三連単</item>
    </string-array>

    <string-array name="nagashi_list">
        <item>1着 流し</item>
        <item>2着 流し</item>
    </string-array>

    <string-array name="nagashi_j1_list">
        <item>1着 流し</item>
        <item>2着 流し</item>
        <item>3着 流し</item>
    </string-array>

    <string-array name="nagashi_j2_list">
        <item>1,2着 流し</item>
        <item>1,3着 流し</item>
        <item>2,3着 流し</item>
    </string-array>

</resources>
