<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/text_odds_title"
            android:textSize="@dimen/font_size_large"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/text_base"
            android:padding="@dimen/margin_medium"
            />
        <Button
            android:text="@string/odds_order_odds"
            android:textSize="@dimen/font_size_button_middle"
            android:id="@+id/button_odds_order_odds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:text="@string/odds_order_bracket_number"
            android:textSize="@dimen/font_size_button_middle"
            android:id="@+id/button_odds_order_bracket_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:text="@string/odds_order_gate_number"
            android:textSize="@dimen/font_size_button_middle"
            android:id="@+id/button_odds_order_gate_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:gravity="right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:text="@string/odds_order_nagashi"
            android:textSize="@dimen/font_size_button_middle"
            android:id="@+id/button_odds_order_nagashi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:text="@string/odds_order_nagashi_j1"
            android:textSize="@dimen/font_size_button_middle"
            android:id="@+id/button_odds_order_nagashi_j1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:text="@string/odds_order_nagashi_j2"
            android:textSize="@dimen/font_size_button_middle"
            android:id="@+id/button_odds_order_nagashi_j2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:text="@string/odds_order_box"
            android:textSize="@dimen/font_size_button_middle"
            android:id="@+id/button_odds_order_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:text="@string/odds_order_formation"
            android:textSize="@dimen/font_size_button_middle"
            android:id="@+id/button_odds_order_formation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        </LinearLayout>

</LinearLayout>