<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <!-- レース情報1行目：競馬場名、レース番号、レース名、発走時刻 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_course_name"
                android:layout_marginRight="3dp"
                android:textColor="@color/text_base"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_race_num"
                android:layout_marginRight="6dp"
                android:textColor="@color/text_base"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_race_name"
                android:textColor="@color/text_base"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:id="@+id/text_start_time"
                android:layout_weight="1"
                android:textColor="@color/text_base"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/label_start"
                android:textColor="@color/text_base"
                />
            </LinearLayout>
        <!-- レース情報2行目：コース、馬場状態、出走頭数 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_track"
                android:layout_marginRight="6dp"
                android:textColor="@color/text_base"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_distance"
                android:textColor="@color/text_base"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_m"
                android:layout_marginRight="6dp"
                android:textColor="@color/text_base"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_condition"
                android:textColor="@color/text_base"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:id="@+id/text_entry_num"
                android:layout_weight="1"
                android:textColor="@color/text_base"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/label_to"
                android:textColor="@color/text_base"
                />
            </LinearLayout>
        </LinearLayout>
    <!--出馬表とレース結果の切り替えボタン-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/switcher_member_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/race_viewer_member_list"
            android:gravity="center"
            android:layout_margin="@dimen/margin_small"
            android:background="@color/background_member_list"
            android:textColor="@color/text_base"
            />
        <TextView
            android:id="@+id/switcher_odds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/race_viewer_odds"
            android:gravity="center"
            android:layout_margin="@dimen/margin_small"
            android:background="@color/background_odds"
            android:textColor="@color/text_base"
            />
        <TextView
            android:id="@+id/switcher_result_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/race_viewer_result_list"
            android:gravity="center"
            android:layout_margin="@dimen/margin_small"
            android:background="@color/background_result_list"
            android:textColor="@color/text_base"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:id="@+id/race_content"
        />
</LinearLayout>