<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:id="@+id/view_container"
              android:paddingTop="@dimen/margin_small"
              android:paddingBottom="@dimen/margin_small"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:background="@drawable/circle_main"
        android:gravity="center"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginRight="@dimen/margin_medium"
        >

        <TextView
            android:id="@+id/text_race_num"
            android:hint="11"
            android:layout_width="20dp"
            android:gravity="right"
            android:layout_marginRight="2dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_large"
            android:textColor="@color/text_white"
            />
        <TextView
            android:text="@string/label_r"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_large"
            android:textColor="@color/text_white"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/text_start_time"
                android:hint="15:40"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_base"
                />
            <TextView
                android:id="@+id/text_race_name"
                android:hint="日本ダービー"
                android:layout_marginLeft="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_base"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/text_track"
                android:hint="ダート"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:textColor="@color/text_base"
                />
            <TextView
                android:id="@+id/text_distance"
                android:hint="2400"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_base"
                />
            <TextView
                android:text="@string/label_m"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/text_base"
                />
            <TextView
                android:id="@+id/text_entry_num"
                android:hint="18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_base"
                />
            <TextView
                android:text="@string/label_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_base"
                />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>